[package]
description = "Parity Ethereum client"
name = "parity-ethereum"
# NOTE Make sure to update util/version/Cargo.toml as well
version = "2.1.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethcore-transaction = { path = "ethcore/transaction" }
ethkey = { path = "ethkey" }

[lib]
name = "paritycut"

[patch.crates-io]
ring = { git = "https://github.com/paritytech/ring" }
