[package]
name = "ethcore-transaction"
description = "Transaction type"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethkey = { path = "../../ethkey" }
keccak-hash = { git = "https://github.com/artemii235/parity-common" }
rlp = { git = "https://github.com/artemii235/parity-common" }
unexpected = { path = "../../util/unexpected" }
ethereum-types = { version = "0.4", default-features = false, features = ["std", "serialize"] }
rustc-hex= "1.0"

[features]
json-tests = []
