[package]
name = "ethcore-transaction"
description = "Transaction type"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethkey = { path = "../../ethkey" }
keccak-hash = { git = "https://github.com/sergeyboyko0791/parity-common" }
rlp = { git = "https://github.com/sergeyboyko0791/parity-common" }
unexpected = { path = "../../util/unexpected" }
ethereum-types = { git = "https://github.com/sergeyboyko0791/parity-common", default-features = false, features = ["rlp", "std", "serialize"] }
rustc-hex = "2.1.0"

[features]
json-tests = []
