[package]
name = "keccak-hasher"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Keccak-256 implementation of the Hasher trait"
license = "GPL-3.0"

[dependencies]
ethereum-types = { version = "0.4", default-features = false, features = ["std", "serialize"] }
tiny-keccak = "1.4.2"
hashdb = { git = "https://github.com/artemii235/parity-common" }
plain_hasher = { git = "https://github.com/artemii235/parity-common" }

